--- a/FootLand/templates/mens_products.html
+++ b/FootLand/templates/mens_products.html
@@ -315,12 +315,12 @@
         </div>
         <div class="filter-section">
             <h4>Color</h4>
-            <label><input type="checkbox" name="color" value="Red"> Red</label>
-            <label><input type="checkbox" name="color" value="Blue"> Blue</label>
-            <label><input type="checkbox" name="color" value="Green"> Green</label>
-            <label><input type="checkbox" name="color" value="Pink"> Pink</label>
-            <label><input type="checkbox" name="color" value="Black"> Black</label>
-            <label><input type="checkbox" name="color" value="White"> White</label>
+            <label><input type="checkbox" name="color" value="red"> red</label>
+            <label><input type="checkbox" name="color" value="blue"> blue</label>
+            <label><input type="checkbox" name="color" value="green"> green</label>
+            <label><input type="checkbox" name="color" value="pink"> pink</label>
+            <label><input type="checkbox" name="color" value="black"> black</label>
+            <label><input type="checkbox" name="color" value="white"> white</label>
         </div>
         <div class="filter-section">
             <h4>Size</h4>
