--- a/FootLand/templates/edit_product.html
+++ b/FootLand/templates/edit_product.html
@@ -213,6 +213,11 @@
             </div>
             
             <div class="form-group">
+                <label for="{{ form.category.id_for_label }}">Category:</label>
+                {{ form.category }}
+            </div>
+            
+            <div class="form-group">
                 <label for="{{ form.image.id_for_label }}">Product Image:</label>
                 {% if product.image %}
                     <img src="{{ product.image.url }}" alt="{{ product.name }}" class="current-image">
