--- a/FootLand/templates/product_detail.html
+++ b/FootLand/templates/product_detail.html
@@ -221,6 +221,7 @@
                         {% else %}
                             <a href="{% url 'login' %}">Welcome</a>
                         {% endif %}
+                        <a href="{% url 'my_orders' %}" id="my_orders">My Orders</a>
                         <a href="{% url 'logout' %}">Logout</a>
                     </div>
                 </li>
