--- a/FootLand/templates/womens_products.html
+++ b/FootLand/templates/womens_products.html
@@ -278,6 +278,7 @@
                     <a href="{% url 'add_profile' %}">Welcome, {{ request.session.username }}</a>                                {% else %}
                         <a href="{% url 'login' %}">Welcome</a>
                     {% endif %}
+                    <a href="{% url 'my_orders' %}" id="my_orders">My Orders</a>
                     <a href="{% url 'logout' %}">Logout</a>
                 </div>
             </li>
